# 3DEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
camera/: Camera.cpp
core/: Axis.cpp  Axis.h  Ball.cpp  Ball.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Football.cpp  Football.h  Ground.cpp  Ground.h  Object.cpp  Object.h  Objects.cpp  Objects.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
math/: Matrix4.cpp  Matrix4.h  Point.cpp  Point.h  Vector3.cpp  Vector3.h
render/: Render.cpp  Render.h
